Close lingering InputStreams and use integers that are guaranteed to be pre-cached by the compiler
git-svn-id: https://betaville.googlecode.com/svn/BetavilleApp/trunk@4013 8c047b66-80f2-bdae-70f3-23be71ff3dc6